--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.7.4",
+    "@supabase/supabase-js": "^2.47.10",
     "next": "14.2.2",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
