--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@auth/supabase-adapter": "^1.7.4",
     "@supabase/supabase-js": "^2.47.10",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
