--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.7.4",
+    "@hookform/resolvers": "^3.9.1",
     "@supabase/supabase-js": "^2.47.10",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
