--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/supabase-adapter": "^1.7.4",
     "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@supabase/supabase-js": "^2.47.10",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
